--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <p>Let Me Get You A Beautiful Website.</p>
             <div class="d-flex "><a class="button-two mx-4"
                   href="https://drive.google.com/file/d/1KqBryq-piHuI-UPgnSn5XfHLyrlicmux/view?usp=sharing"
-                  target="blank">Resume</a><a class="button-two mx-4" href="/portfolio">Portfolio</a></div>
+                  target="blank">Resume</a><a class="button-two mx-4" href="https://shubhangdeore.github.io/Portfilio/">Portfolio</a></div>
          </div>
       </div>
 
