--- a/index.html
+++ b/index.html
@@ -81,58 +81,11 @@
 
 
       <!------------------ Skill --------------->
-
-
-      <div id="skills">
+<div id="skills">
          <section class="sc-papXJ huEXyV">
             <div class="skilss" id="skils">
                <h3 id="Skil-Heading">MY SKILL SET</h3>
                <div class="row g-3 justify-content-center cardBox">
-                  <div class="col-md-2 mx-2">
-                     <div class="skils  ">
-                        <div class="Skil_icon" style="color: yellow;"><i class="fa-brands fa-js fabicon"></i></div>
-                        <h3>JavaScript</h3>
-                     </div>
-                  </div>
-                  <div class="col-md-2 mx-2">
-                     <div class="skils  ">
-                        <div class="Skil_icon" style="color: rgb(97, 219, 251);"><i
-                              class="fa-brands fa-react fabicon"></i>
-                        </div>
-                        <h3>ReactJs</h3>
-                     </div>
-                  </div>
-                  <div class="col-md-2 mx-2">
-                     <div class="skils  ">
-                        <div class="Skil_icon" style="color: rgb(60, 135, 58);"><i
-                              class="fa-brands fa-node fabicon"></i>
-                        </div>
-                        <h3>NodeJs</h3>
-                     </div>
-                  </div>
-                  <div class="col-md-2 mx-2">
-                     <div class="skils  ">
-                        <div class="Skil_icon" style="color: rgb(104, 160, 99);"><i
-                              class="fa-brands fa-node-js fabicon"></i>
-                        </div>
-                        <h3>ExpressJs</h3>
-                     </div>
-                  </div>
-                  <div class="col-md-2 mx-2">
-                     <div class="skils  ">
-                        <div class="Skil_icon" style="color: rgb(63, 160, 55);"><i class="fa-solid fab fa-envira"></i>
-                        </div>
-                        <h3>MongoDB</h3>
-                     </div>
-                  </div>
-                  <div class="col-md-2 mx-2">
-                     <div class="skils  ">
-                        <div class="Skil_icon" style="color: rgb(255, 255, 255);"><i
-                              class="fa-brands fa-github fabicon"></i>
-                        </div>
-                        <h3>Git/GitHub</h3>
-                     </div>
-                  </div>
                   <div class="col-md-2 mx-2">
                      <div class="skils  ">
                         <div class="Skil_icon" style="color: rgb(227, 76, 38);"><i
@@ -151,6 +104,52 @@
                   </div>
                   <div class="col-md-2 mx-2">
                      <div class="skils  ">
+                        <div class="Skil_icon" style="color: yellow;"><i class="fa-brands fa-js fabicon"></i></div>
+                        <h3>JavaScript</h3>
+                     </div>
+                  </div>
+                  <div class="col-md-2 mx-2">
+                     <div class="skils  ">
+                        <div class="Skil_icon" style="color: rgb(97, 219, 251);"><i
+                              class="fa-brands fa-react fabicon"></i>
+                        </div>
+                        <h3>ReactJs</h3>
+                     </div>
+                  </div>
+                  <div class="col-md-2 mx-2">
+                     <div class="skils  ">
+                        <div class="Skil_icon" style="color: rgb(60, 135, 58);"><p
+                              class="fabicon">C#</p>
+                        </div>
+                        <h3>C# </h3>
+                     </div>
+                  </div>
+                  <div class="col-md-2 mx-2">
+                     <div class="skils  ">
+                        <div class="Skil_icon" style="color: rgb(104, 160, 99);">
+                           <fabicon class="fa-brands fa-java fabicon"></i>
+                        </div>
+                        <h3>Java</h3>
+                     </div>
+                  </div>
+                  <div class="col-md-2 mx-2">
+                     <div class="skils  ">
+                        <div class="Skil_icon" style="color: rgb(63, 160, 55);"><i class="fa-solid fa-database fabicon"></i>
+                        </div>
+                        <h3>MySQL</h3>
+                     </div>
+                  </div>
+                  <div class="col-md-2 mx-2">
+                     <div class="skils  ">
+                        <div class="Skil_icon" style="color: rgb(255, 255, 255);"><i
+                              class="fa-brands fa-github fabicon"></i>
+                        </div>
+                        <h3>Git/GitHub</h3>
+                     </div>
+                  </div>
+                 
+                  <div class="col-md-2 mx-2">
+                     <div class="skils  ">
                         <div class="Skil_icon" style="color: rgb(86, 61, 124);"><i
                               class="fa-brands fa-bootstrap fabicon"></i>
                         </div>
@@ -161,6 +160,7 @@
             </div>
          </section>
       </div>
+
 
       <!-------------Portfolio -------------->
       <div id="portfolio">
